# Concurrent-P2P-Distributed-Transfer-Engine

./: .gitignore  LICENSE  README.md
code/: CMakeLists.txt  builder.sh
code/cmake/: sanitisers.cmake  warnings.cmake
code/include/: bencode.hpp  bitfield.hpp  config.hpp  disk_io.hpp  download_coordinator.hpp  event_loop.hpp  hasher.hpp  logger.hpp  peer_connection.hpp  peer_id.hpp  peer_manager.hpp  peer_message.hpp  piece_manager.hpp  piece_picker.hpp  tcp_connection.hpp  torrent.hpp  tracker_client.hpp
code/src/: bencode.cpp  bitfield.cpp  config.cpp  disk_io.cpp  download_coordinator.cpp  event_loop.cpp  hasher.cpp  logger.cpp  main.cpp  peer_connection.cpp  peer_id.cpp  peer_manager.cpp  peer_message.cpp  piece_manager.cpp  piece_picker.cpp  tcp_connection.cpp  torrent.cpp  tracker_client.cpp
code/tests/: adversarial_test.py  benchmark.py  e2e_seeder.py  test_bencode.cpp
docs/: Notes.md
